# llevm

./: .gitignore  AUTHORS  Makefile  Makefile.in  NOTICE  README  README.md  configure  configure.in  mac_env  os_lathund  rebar
api_gen/: Makefile.in  doxygen.conf  doxygen.conf.in  llevm.c.in  llevm.erl.in  llevm.hrl.in  llvm_api.erl  llvm_api.hrl  llvm_api_erlang.erl  llvm_api_nif.erl  llvm_api_parser.erl
csrc/: llevm.c  llvm_nif.c  llvm_nif.cc
include/: llevm.hrl
src/: llevm.app.src  llevm.erl  llvm_nif.erl
tests/: basic_SUITE.erl  erlang_SUITE.erl  kaleidoscope_SUITE.erl
tests/erlang_SUITE_data/: erlang_gen.erl  erlang_parse.yrl  erlang_scan.erl
tests/kaleidoscope_SUITE_data/: kal_gen.erl  kal_parse.yrl  kal_scan.erl
